<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_inventory"
    android:backgroundTintMode="src_over"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="140dp"
        android:fontFamily="casual"
        android:text="@string/regw"
        android:textColor="@color/white"
        android:background="#23000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dp"
        android:background="#23000000"
        android:layout_marginTop="30dp"
        android:fontFamily="cursive"
        android:text="@string/regCr"

        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText

        android:id="@+id/edtfn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:background="#83355C7E"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:hint="@string/enUsr"
        android:inputType="text" />

    <EditText

        android:id="@+id/edtsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:background="#83355C7E"
        android:ems="10"
        android:hint="@string/enSN"
        android:inputType="text" />

    <EditText

        android:id="@+id/edtphn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#83355C7E"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:ems="10"
        android:hint="@string/enph"
        android:inputType="phone" />

    <EditText

        android:id="@+id/edtpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#83355C7E"
        android:ems="10"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/enPass"
        android:inputType="number"

        />

    <EditText
        android:id="@+id/edtrpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#83355C7E"
        android:ems="10"
        android:hint="@string/enCpass"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="number" />


    <Button
        android:id="@+id/btncrtreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:backgroundTint="#2196F3"
        android:text="Register "
        />


</LinearLayout>