<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/img_background_inventory"
    android:backgroundTintMode="src_over"
    tools:context=".Inventory">


    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:src="@drawable/img_computer" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wlc"
        android:layout_marginTop="20dp"
        android:textColor="#FDFDFD"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        />


    <EditText
        android:id="@+id/edtfn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#631F384E"
        android:ems="10"
        android:hint="@string/enUsr"
        android:inputType="text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="cursive"
        android:textColorHint="@color/white"

        />

    <EditText

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="#631F384E"
        android:inputType="number"
        android:id="@+id/edtpass"
        android:hint="@string/enPass"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:fontFamily="cursive"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:layout_marginTop="20dp"
        android:text="Login"
        android:textSize="20sp"
        android:id="@+id/btnlog"
        />





</LinearLayout>